--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <title>Viet baguette</title>
+    <meta name="description" content="Management system for Viet Baguette" />
+    <meta name="author" content="Viet Baguette" />
+
+    <meta property="og:title" content="Vietbaguette" />
+    <meta property="og:description" content="Management system for Viet Baguette" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/vietbaguette-opengraph.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@vietbaguette" />
+    <meta name="twitter:image" content="/vietbaguette-opengraph.png" />
   </head>
+
   <body>
     <div id="root"></div>
+    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
