fix(`frontend/index.html`): Correct title casing from "Viet baguette" to "Viet Baguette"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Viet baguette</title>
+    <title>Viet Baguette</title>
     <meta name="description" content="Management system for Viet Baguette" />
     <meta name="author" content="Viet Baguette" />
 
